# socorro-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  about.hbs  about.toml
.github/workflows/: ci.yml  release.yml
src/: auth.rs  cache.rs  client.rs  lib.rs  main.rs
src/commands/: auth.rs  bugs.rs  correlations.rs  crash.rs  crash_pings.rs  mod.rs  search.rs
src/models/: bugs.rs  common.rs  correlations.rs  crash_pings.rs  mod.rs  processed_crash.rs  search.rs
src/output/: compact.rs  json.rs  markdown.rs  mod.rs
