[package]
name = "socorro-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust CLI tool for querying Mozilla's Socorro crash reporting system, optimized for LLM coding agents"
repository = "https://github.com/padenot/socorro-cli"
authors = ["Paul Adenot <paul@paul.cx>"]

[[bin]]
name = "socorro-cli"
path = "src/main.rs"

[lib]
name = "socorro_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rpassword = "7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
