[package]
name = "socorro-cli"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "A Rust CLI tool for querying Mozilla's Socorro crash reporting system, optimized for LLM coding agents"
repository = "https://github.com/yjugl/socorro-cli"
authors = ["Paul Adenot <paul@paul.cx>", "Yannis Juglaret <yjuglaret@mozilla.com>"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[[bin]]
name = "socorro-cli"
path = "src/main.rs"

[lib]
name = "socorro_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
moz-cli-version-check = "0.2"
dirs = "6"
sha1 = "0.10"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rpassword = "7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
