[package]
name = "socorro-cli"
version = "0.5.2"
edition = "2024"
license = "MPL-2.0"
description = "A Rust CLI tool for querying Mozilla's Socorro crash reporting system, optimized for LLM coding agents"
repository = "https://github.com/yjugl/socorro-cli"
authors = ["Paul Adenot <paul@paul.cx>", "Yannis Juglaret <yjuglaret@mozilla.com>"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
default = ["secret-service"]
secret-service = ["keyring/sync-secret-service"]

[[bin]]
name = "socorro-cli"
path = "src/main.rs"

[lib]
name = "socorro_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking", "gzip", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
moz-cli-version-check = "0.2"
dirs = "6"
sha1 = "0.10"
keyring = { version = "3", features = ["windows-native", "apple-native"] }
rpassword = "7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
